--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!----===== Boxicons CSS ===== -->
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 
-    <!--<title>Dashboard Sidebar Menu</title>-->
+    <!--<title>AHBS Project</title>-->
 </head>
 <body>
 <nav class="sidebar close">
